# TC3002-Compiler

./: CMakeLists.txt  README.md  main.cpp
QuetzalCodeExamples/: 001_hello.quetzal
TokenKind/: TokenKind.cpp  TokenKind.h
Util/: Lexer.cpp
Util/FileUtils/: FileUtils.cpp  FileUtils.h
Util/Lexer/: Lexer.cpp  Lexer.h
Util/Parser/: Parser.cpp  Parser.h
